# lenient-semver

./: .gitignore  Cargo.toml  LICENSE  LICENSE-APL  Makefile.toml  README.md  README.tpl  release.toml  search-index.js  settings.html  source-files.js
.github/: dependabot.yml
.github/workflows/: checks.yml
benches/: parsers.rs
benchmark_runner/: Cargo.toml
benchmark_runner/benches/: parsers.rs
benchmark_runner/src/: lib.rs
benchmarks/: Cargo.toml  Makefile.toml
benchmarks/benches/: parsers.rs
benchmarks/src/: benchmarks.rs  lib.rs
builder/: Cargo.toml
builder/src/: lib.rs
doc/: dfa.dot  railroad.js
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/std/error/: trait.Error.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
lenient_version_parser/: all.html  enum.ErrorKind.html  fn.parse_version.html  index.html  sidebar-items.js  struct.Error.html  struct.OwnedError.html
parser/: Cargo.toml
parser/src/: lib.rs
src/: lib.rs  tests.rs
src/lenient_version_parser/: lib.rs.html
version/: Cargo.toml
version/src/: lib.rs  metadata.rs
