[workspace]
members = [ "parser", "version", "benchmarks", "benchmark_runner" ]

[package]
name = "lenient_semver"
version = "0.3.0"
description = "Lenient Semantic Version numbers."
authors = ["Paul Horn <developer@knutwalker.de>"]
edition = "2018"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/knutwalker/lenient-semver/"
repository = "https://github.com/knutwalker/lenient-semver/"
categories = ["development-tools", "parser-implementations"]
keywords = ["lenient", "parser", "semver", "semantic", "version"]

[dependencies]
lenient_semver_parser = { path = "parser", version = "0.3", default-features = false }
lenient_version = { path = "version", version = "0.3", default-features = false, optional = true }
semver = { version = "0.11", optional = true, package = "semver" }
semver010 = { version = "0.10", optional = true, package = "semver" }

[features]
default = [ "semver11" ]
semver11 = [ "semver", "lenient_semver_parser/semver" ]
semver10 = [ "semver010", "lenient_semver_parser/semver10" ]
version_lite = [ "lenient_version", "lenient_version/parser" ]
version_semver = [ "version_lite", "lenient_version/semver" ]
version_serde = [ "version_lite", "lenient_version/serde" ]

[dev-dependencies]
lenient_version = { path = "version", features = [ "serde" ] }
serde = { version = "1", package = "serde", features = ["derive"] }
serde_json = "1"
semver = "0.11"

[package.metadata.docs.rs]
features = [ "semver11", "semver10", "version_lite", "version_serde" ]
