[workspace]
members = [ "builder", "parser", "version", "benchmarks", "benchmark_runner" ]

[package]
name = "lenient_semver"
version = "0.4.0"
description = "Lenient Semantic Version numbers."
authors = ["Paul Horn <developer@knutwalker.de>"]
edition = "2018"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/knutwalker/lenient-semver/"
repository = "https://github.com/knutwalker/lenient-semver/"
categories = ["development-tools", "parser-implementations"]
keywords = ["lenient", "parser", "semver", "semantic", "version"]

[dependencies]
lenient_semver_parser = { path = "parser", version = "^0.4", default-features = false }
lenient_version = { path = "version", version = "^0.4", default-features = false, optional = true }
semver_v100 = { version = "1", optional = true, package = "semver" }
semver_v011 = { version = "0.11", optional = true, package = "semver" }
semver_v010 = { version = "0.10", optional = true, package = "semver" }

[features]
default = [ "semver" ]
semver = [ "semver_v100", "lenient_semver_parser/semver" ]
semver011 = [ "semver_v011", "lenient_semver_parser/semver011" ]
semver010 = [ "semver_v010", "lenient_semver_parser/semver010" ]
parse_partial = [ "lenient_semver_parser/partial" ]
version_lite = [ "lenient_version", "lenient_version/parser" ]
version_semver = [ "version_lite", "lenient_version/semver" ]
version_serde = [ "version_lite", "lenient_version/serde" ]

[dev-dependencies]
lenient_version = { path = "version", features = [ "serde" ] ,version = "^0.4"}
serde = { version = "1", package = "serde", features = ["derive"] }
serde_json = "1"
semver_v100 = { version = "1", package = "semver" }


[package.metadata.docs.rs]
features = [ "semver100", "semver011", "semver010", "version_lite", "version_serde" ]
