[package]
name = "benchmark_runner"
version = "0.4.3"
description = "Benchmark runner for Lenient parser for Semantic Version numbers."
authors = ["Paul Horn <developer@knutwalker.de>"]
edition = "2018"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/knutwalker/lenient-semver/"
repository = "https://github.com/knutwalker/lenient-semver/"
publish = false
workspace = ".."

[dependencies]
criterion = "0.4.0"
benchmarks = { path = "../benchmarks" }

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "parsers"
harness = false
